Fix mobile row-gap between col-1 and col-2 using row-gap: 0

--- a/style.css
+++ b/style.css
@@ -414,6 +414,7 @@ footer {
     .project-wrapper {
         grid-template-columns: 1fr;
         padding-left: 100px;
+        row-gap: 0;
     }
 
     .col-1 img {
